added new image

--- a/myntra_voucher.html
+++ b/myntra_voucher.html
@@ -39,9 +39,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Gift Voucher</h1>
-        <p>Thank you for choosing our gift voucher! Present this voucher to enjoy the benefits.</p>
-        <img src="gift_card_image.jpg" alt="Gift Voucher Image">
+        <h1> Myntra Gift Voucher</h1>
+        <p>Here is your gift from the secret santa.</p>
+        <img src="secret_santa.jpg" alt="Gift Voucher Image">
         <div class="voucher">Voucher Code: ABC123</div>
         <h2>Redemption Instructions:</h2>
         <ol>
