--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
         <h1> Myntra Gift Voucher</h1>
         <p>Here is your gift from the secret santa.</p>
-        <img src="secret_santa.jpg" alt="Gift Voucher Image" width="500" height="333">
+        <img src="santa.jpg" alt="Gift Voucher Image" width="500" height="333">
         <div class="voucher">Voucher Code: ABC123</div>
         <h2>Redemption Instructions:</h2>
         <ol>
