commented the code

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <p>Here is your gift from the secret santa.</p>
         <img src="santa.jpg" alt="Gift Voucher Image" width="500" height="333">
         <div class="voucher">Voucher Code: ABC123</div>
-        <h2>Redemption Instructions:</h2>
+<!--         <h2>Redemption Instructions:</h2>
         <ol>
             <li>Visit our store at [Store Address].</li>
             <li>Present this voucher to the cashier.</li>
             <li>Enjoy your shopping!</li>
         </ol>
-        <p>If you have any questions, please contact us at [Contact Email/Phone].</p>
+        <p>If you have any questions, please contact us at [Contact Email/Phone].</p> -->
     </div>
 </body>
 </html>
