--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -43,13 +43,88 @@
         <p>Here is your gift from the secret santa.</p>
         <img src="santa.jpg" alt="Gift Voucher Image" width="500" height="333">
         <div class="voucher">Voucher Code: ABC123</div>
-<!--         <h2>Redemption Instructions:</h2>
+        <h2>Redemption Instructions:</h2>
         <ol>
             <li>Visit our store at [Store Address].</li>
             <li>Present this voucher to the cashier.</li>
             <li>Enjoy your shopping!</li>
         </ol>
-        <p>If you have any questions, please contact us at [Contact Email/Phone].</p> -->
+        <p>If you have any questions, please contact us at [Contact Email/Phone].</p> 
     </div>
 </body>
 </html>
+ -->
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gift Voucher</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
+            color: #495057;
+            text-align: center;
+        }
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            background-color: #ffffff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2, p {
+            color: #e44d26;
+        }
+        .voucher {
+            font-size: 28px;
+            font-weight: bold;
+            color: #e44d26;
+            margin-bottom: 20px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        ol {
+            text-align: left;
+            margin-left: 20px;
+        }
+        p {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Gift Voucher</h1>
+        <p>Thank you for choosing our gift voucher! Present this voucher to enjoy the benefits.</p>
+        <img src="gift_card_image.jpg" alt="Gift Voucher Image">
+        <div class="voucher">Voucher Code: ABC123</div>
+        <h2>Redemption Instructions:</h2>
+        <ol>
+            <li>Visit our store at [Store Address].</li>
+            <li>Present this voucher to the cashier.</li>
+            <li>Enjoy your shopping!</li>
+        </ol>
+        <p>If you have any questions, please contact us at [Contact Email/Phone].</p>
+    </div>
+</body>
+</html>
+
+
+
+
+
+
+
+ 
