Update index.html version 1

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="container">
         <h1>Gift Voucher</h1>
         <p>Thank you for choosing our gift voucher! Present this voucher to enjoy the benefits.</p>
-        <img src="gift_card_image.jpg" alt="Gift Voucher Image">
+        <img src="santa.jpg" alt="Gift Voucher Image">
         <div class="voucher">Voucher Code: ABC123</div>
         <h2>Redemption Instructions:</h2>
         <ol>
