--- a/index.html
+++ b/index.html
@@ -40,16 +40,9 @@
 <body>
     <div class="container">
         <h1> Myntra Gift Voucher</h1>
-        <p>Here is your gift from the secret santa.</p>
+        <p>Hello Angel!\nHere is your gift from the secret santa.\nMyntra voucher worth Rs.3000</p>
         <img src="santa.jpg" alt="Gift Voucher Image" width="500" height="333">
-        <div class="voucher">Voucher Code: ABC123</div>
-<!--         <h2>Redemption Instructions:</h2>
-        <ol>
-            <li>Visit our store at [Store Address].</li>
-            <li>Present this voucher to the cashier.</li>
-            <li>Enjoy your shopping!</li>
-        </ol>
-        <p>If you have any questions, please contact us at [Contact Email/Phone].</p>  -->
+        <div class="voucher">Voucher Code: 6001220300858667</div>
     </div>
 </body>
 </html>
