--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <div class="container">
         <h1> Myntra Gift Voucher</h1>
-        <p>Hello Angel!\nHere is your gift from the secret santa.\nMyntra voucher worth Rs.3000</p>
+        <p>Hello Angel! Here is your gift from the secret santa. Myntra voucher worth Rs.3,000/-</p>
         <img src="santa.jpg" alt="Gift Voucher Image" width="500" height="333">
         <div class="voucher">Voucher Code: 6001220300858667</div>
     </div>
